fix/hero-banner in dark mode shows different color

--- a/todolist/src/index.css
+++ b/todolist/src/index.css
@@ -5,9 +5,9 @@
   --font-josefin: "Josefin Sans", sans-serif;
 }
 
-.main-bg {
+/* .main-bg {
   background: #ffff;
-}
+} */
 
 .fake-dark-mode {
   filter: invert(100%);
